* bc: The '-=' operator did not work.
* nawk: CONVFMT was used in the System V personality but not in the POSIX
  personality, contrary to the documentation.
* nawk: printf("%u") did not work if the argument was larger that INT_MAX.
* nawk: RLENGTH was not set correctly for matches of zero length.
* file: The POSIX version does not exit with an error status if a file could
  not be opened.
* pax: The -pa and -pme option combinations now work.
* pax: The -po option works for users other than root (but only affects the
  group ownerships then).
* pax: Without -ro or -re, set[ug]id bits are not preserved.
* pax: A '&' in the replacement string for the '-s' option did not work.
* pax: The '-b' option now accepts multiplication suffixes.
* pax: The '-u' option is now respected in read mode too.
* pax: The '-n' option in read mode does not mark a pattern as used if it
  matched an archive entry but that entry was not selected due to '-u'.
* pax: If link() fails, no separate copy of an archive entry is created.
* find: Symbolic modes for -perm that include the sgid bit now work properly.
* cp: The -f option does not disable the -i option in the POSIX personality
  and vice-versa.
* df: Percentage values are now rounded to the next integer as demanded by
  POSIX.
* man: With the -k option, the exit status is now 0 if any matches have been
  found.
* stty: If ispeed and ospeed are different, both are printed separately.
* stty: If the system does not support split input/output speed, the 'ispeed'
  and 'ospeed' operands have no effect if both are given.
* tabs: The -T option had no effect. Its argument is now required.
* wc: Use a column-aligned output format for the POSIX version too since the
  standard does not actually disallow it.

Release 050123
* tr: The highest acceptable wide character for complementing strings is now
  dynamically reset from 0x10FFFF to 0xFFFF if memory is sparse. The size of
  the corresponding hash table has been raised to reduce computing time.